# RetroVM

./: .gitignore  CMakeLists.txt  NOTES.md  README.md
.github/workflows/: ci.yml
include/retrovm/: assembler.hpp  checkpoint.hpp  opcodes.hpp  trace.hpp  vm.hpp
programs/: demo.asm  divzero.asm  io.asm  snap.asm  snap.bin.snap.0000  snap.bin.snap.0001  snap.bin.snap.0002
scripts/: run-bench-backN.sh
src/: assembler.cpp  checkpoint.cpp  main.cpp  trace.cpp  vm.cpp
tests/: _lib.sh  debug.sh  debug_fresh.sh  inspect.sh  inspect_diff.sh  inspect_frame.sh  inspect_trace.sh  inspect_unknown_opcode.sh  record_replay.sh  save_restore.sh
